# hll_duckdb

./: .gitignore  CMakeLists.txt  README.md
benchmark/: README.md  duckdb_cli_runner.py  merge_workflow_eval.py  requirements.txt  run_benchmark_suite.py  sketch_workflow_demo.py  tpch_hll_eval.py
src/: quack_extension.cpp
src/hll/: CMakeLists.txt  README.md
src/hll/include/hll/: hll.h  murmur3.h
src/hll/src/: hll.cpp
src/hll/tests/: test_hll.cpp
test/sql/: quack.test
